Added sendBuffer